<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoMind</string>
    <string name="title_serving_detail">Serving Detail</string>
    <string name="name_hint">Name</string>
    <string name="notes_hint">Notes…</string>
    <string name="calories_per_day_title">Target calories per day</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="search_hint">Food name</string>
    <string name="menu_search">Search</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="new_serving">New serving</string>
    <string name="new_food">New food</string>
    <string name="overflow_content_description">Menu</string>
    <string name="title_activity_weekly_review">Weekly Review</string>
    <string name="title_activity_calculator">Calculator</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="drawer_opened">Drawer opened</string>
    <string name="drawer_closed">Drawer closed</string>
    <string name="weekly_review_header_day">Day</string>
    <string name="calories">Calories</string>
    <string name="weekly_review_header_remaining">Left</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_delete_barcodes">Delete barcodes</string>
    <string name="menu_weekly_review">Review week</string>
    <string name="number">Number</string>
    <string name="units">Units</string>
    <string name="serving">serving</string>
    <string name="show_in_main_list">Show in main list</string>
    <string name="cal">cal</string>
    <string name="space_cal">cal</string>

</resources>
