<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
    <item
        android:id="@+id/menu_scan"
        android:title="@string/menu_scan"
        android:icon="@drawable/ic_action_barcode_1"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_new"
        android:title="@string/new_food"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/settings"
        android:title="@string/menu_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/weekly_review"
        android:title="@string/menu_weekly_review"
        />
</menu>